--- a/Credentials/templates/account/signup.html
+++ b/Credentials/templates/account/signup.html
@@ -1,5 +1,5 @@
 <h1>signup</h1>
-<form method="post">
+<form method="post" action="{% url 'account_signup' %}">
     {% csrf_token %}
     {{form.as_p}}
     <input type="submit" />
