--- a/Credentials/templates/account/login.html
+++ b/Credentials/templates/account/login.html
@@ -1,1 +1,6 @@
 <h1>login</h1>
+<form method="post" action="{% url 'account_login' %}">
+    {% csrf_token %}
+    {{form.as_p}}
+    <input type="submit" />
+</form>
