--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load socialaccount %}
+{% load static %}
 <!DOCTYPE html>
 <html lang='en'>
     <head>
@@ -7,15 +7,47 @@
         <title>BlackJack</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-suit-diamond-fill' viewBox='0 0 16 16'%3E%3Cpath d='M2.45 7.4 7.2 1.067a1 1 0 0 1 1.6 0L13.55 7.4a1 1 0 0 1 0 1.2L8.8 14.933a1 1 0 0 1-1.6 0L2.45 8.6a1 1 0 0 1 0-1.2'%3E%3C/path%3E%3C/svg%3E">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+        <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='red' class='bi bi-suit-diamond-fill' viewBox='0 0 16 16'%3E%3Cpath d='M2.45 7.4 7.2 1.067a1 1 0 0 1 1.6 0L13.55 7.4a1 1 0 0 1 0 1.2L8.8 14.933a1 1 0 0 1-1.6 0L2.45 8.6a1 1 0 0 1 0-1.2'%3E%3C/path%3E%3C/svg%3E">
     </head>
     <body>
-        <header>
-            <h1>BlackJack</h1>
-            <span><a href={% url "account_login" %}>Login</a></span>
-            <span><a href={% url "account_signup" %}>Signup</a></span>
-            <span><a href="{% provider_login_url 'google' %}">Signin with google</a></span>
-        </header>
+        <nav class="navbar bg-dark navbar-dark p-3">
+            <div class="container-fluid text-light">
+                <div class="navbar-brand d-flex">
+                    <i class="bi bi-suit-diamond-fill text-danger"></i>
+                    <div>BlackJack</div>
+                </div>
+                {% if user.is_authenticated %}
+                <ul class="d-flex justify-content-between align-items-center p-0 m-0 col-2" style="list-style: none;">
+                    <li>
+                        <a href={% url "account_login" %} class="btn btn-primary">Login</a>
+                    </li>
+                    <li>or</li>
+                    <li>
+                        <a href={% url "account_signup" %} class="btn btn-primary">Signup</a>
+                    </li>
+                </ul>
+                {% else %}
+                <div class="nav-item dropdown col-sm-3 col-lg-1 btn btn-primary">
+                    <a class="nav-link dropdown-toggle d-flex align-items-center justify-content-around" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <div>
+                            {% if not user.img %}
+                            <i class="bi bi-person-circle fs-4"></i>
+                            {% else %}
+                            <img src="/static/person.jpg"/><!--img not showing up because of wierd static config-->
+                            {% endif %}
+                        </div>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </div>          
+                {% endif %}
+            </div>
+        </nav>
         {% block content %}{% endblock %}
         <footer>
             <h1>contact me</h1>
