--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
                     <i class="bi bi-suit-diamond-fill text-danger"></i>
                     <div>BlackJack</div>
                 </div>
-                {% if user.is_authenticated %}
+                {% if not user.is_authenticated %}
                 <ul class="d-flex justify-content-between align-items-center p-0 m-0 col-2" style="list-style: none;">
                     <li>
                         <a href={% url "account_login" %} class="btn btn-primary">Login</a>
@@ -28,21 +28,21 @@
                     </li>
                 </ul>
                 {% else %}
-                <div class="nav-item dropdown col-sm-3 col-lg-1 btn btn-primary">
+                <div class="nav-item dropdown btn btn-primary">
                     <a class="nav-link dropdown-toggle d-flex align-items-center justify-content-around" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <div>
+                        <div class="me-4">
                             {% if not user.img %}
                             <i class="bi bi-person-circle fs-4"></i>
                             {% else %}
-                            <img src="/static/person.jpg"/><!--img not showing up because of wierd static config-->
+                            <img src="{% static '/images/person.jpg' %}" style="height: 2.25rem; width: 2.25rem; border-radius: 100%;"/>
                             {% endif %}
                         </div>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Profile</a></li>
                       <li><a class="dropdown-item" href="#">Another action</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a href={% url "account_logout" %} class="dropdown-item">Logout</a></li>
                     </ul>
                 </div>          
                 {% endif %}
