--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div>
+<div style="height:100vh;">
     <h1>Introduction</h1>
     <div>
         This is Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, laudantium, molestiae, porro quaerat 
