--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,8 @@
         {% block content %}{% endblock %}
         <footer class="bg-dark p-3 text-white">
             <h1>Contact me:</h1>
-            <i class="bi bi-linkedin"></i>
+            <i class="bi bi-linkedin mr-5"></i>
+            <i class="bi bi-github"></i>
         </footer>
     </body>
 </html>
