footer work and frontend

--- a/Credentials/templates/account/signup.html
+++ b/Credentials/templates/account/signup.html
@@ -1,8 +1,13 @@
+{% extends "base.html" %}
 {% load socialaccount %}
-<h1>signup</h1>
-<form method="post" action="{% url 'account_signup' %}">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" />
-</form>
-<a href='{% provider_login_url "google" %}'>google</a>
+{% block content %}
+<div style="height:100vh;">
+    <h1>signup</h1>
+    <form method="post" action="{% url 'account_signup' %}">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" />
+    </form>
+    <a href='{% provider_login_url "google" %}'>google</a>
+</div>
+{% endblock %}
