--- a/templates/base.html
+++ b/templates/base.html
@@ -51,8 +51,10 @@
         {% block content %}{% endblock %}
         <footer class="bg-dark p-3 text-white">
             <h1>Contact me:</h1>
-            <i class="bi bi-linkedin mr-5"></i>
-            <i class="bi bi-github"></i>
+            <a href="https://linkedin.com/in/haniroshanck" class="text-light me-1 icon-link icon-link-hover" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);"><i class="bi bi-linkedin"></i></a>
+            <a href="https://github.com/hani-2020" class="text-light me-1 icon-link icon-link-hover" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);" ><i class="bi bi-github"></i></a>
+            <a href="https://twitter.com/HaniRoshanCK" class="text-light me-1 icon-link icon-link-hover" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);" ><i class="bi bi-twitter-x"></i></a>
+            <a href="mailto:haniroshan2002@gmail.com" class="text-light me-1 icon-link icon-link-hover" style="--bs-icon-link-transform: translate3d(0, -.125rem, 0);" ><i class="bi bi-envelope-at-fill"></i></a>
         </footer>
     </body>
 </html>
