--- a/Credentials/templates/account/profile.html
+++ b/Credentials/templates/account/profile.html
@@ -1,4 +1,9 @@
-<div>
-    hi {{user.first_name}}
+{% extends "base.html" %}
+{% block content %}
+<div style="height:100vh;">
+    <div>
+        hi {{user.first_name}}
+    </div>
+    <a href="{% url "account_logout" %}">logout</a>
 </div>
-<a href="{% url "account_logout" %}">logout</a>
+{% endblock %}
