--- a/Credentials/templates/account/signup.html
+++ b/Credentials/templates/account/signup.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div style="height:100vh;">
     <h1>signup</h1>
-    <form method="post" action="{% url 'account_signup' %}">
+    <form method="post" action="{% url 'account_signup' %}" enctype="multipart/form-data">
         {% csrf_token %}
         {{form.as_p}}
         <input type="submit" />
